# FMath

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  README.md  clang-build.toml  conanfile.py.in
.github/workflows/: ci.yml
FMath/: Core  Field.hpp
FMath/detail/: Expression_Add.hpp  Expression_Function.hpp  Expression_Mult.hpp  Expression_Slice.hpp  Expression_SubSet.hpp  Field.hpp  FieldExpression.hpp  FieldFunctions.hpp  FieldReductions.hpp  SubSet.hpp  Using.hpp
benchmark/: lambdas.cpp  nontrivial.cpp  simple.cpp
benchmark/nonius/: clock.h++
docs/: Basics.md  Examples_Basics.md  General.md  Lambdas.md  Subsets.md  Using.md  conf.py  index.rst
include/FMath/: Core
include/FMath/detail/: Convenience.hpp  Expression_Add.hpp  Expression_Function.hpp  Expression_Lambda.hpp  Expression_Mult.hpp  Expression_Slice.hpp  Expression_SubSet.hpp  Field.hpp  FieldAssign.hpp  FieldReductions.hpp  Operators.hpp  Using.hpp
test/: catch.hpp  indexing.cpp  lambda.cpp  reductions.cpp  scalarfield.cpp  subset.cpp  test1.cpp  transform.cpp  vectorfield.cpp
